# cpp_utils

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
benchmarks/: CMakeLists.txt  bm_text.cpp
cmake/: ml_cpp_utils-config.cmake  ml_cpp_utils.pc.in
cpp_utils/: CMakeLists.txt  file_io.cpp  file_io.hpp
ml_cpp_utils/: CMakeLists.txt  bitwise.hpp  file_io.hpp  iter_utils.hpp  split_span.hpp  string_hasher.hpp  text.hpp
tests/: CMakeLists.txt  test_bitwise.cpp  test_file_io.cpp  test_iter_utils.cpp  test_split_span.cpp  test_string_hasher.cpp  test_text.cpp
